@@ -1,6 +1,9 @@
 LIST OF CHANGES
 ---------------
 
+ - additional fields for the pac_bio_run_well_metrics tables and
+   bring DBIx classes up-to-date.
+
 release 6.19.1
  - change collation on id_product row of seq_product_irods_locations to
    utf8_unicode_ci to enable JOINs
